service section tablet view fixed

--- a/style.css
+++ b/style.css
@@ -257,6 +257,7 @@ img {
 
 .section__title {
   display: flex;
+  justify-content: center;
   margin: 24px 0 16px;
   color: var(--primary-dark-100);
   font-family: var(--font-primary);
@@ -268,6 +269,7 @@ img {
 }
 
 .section__content {
+  /* text-align: center; */
   margin: 0;
   color: var(--primary-dark-100);
   font-family: var(--font-secondary);
@@ -361,13 +363,18 @@ footer {
 
 /* TABLETS */
 /* TODO: 
-  - Make phone img bigger
+  - Make phone img bigger 
   - Display circle graphics on left and right side of hero section
   - Display the services section in columns
   - Make founder img smaller and offset from the info box
   - Add in the graphic to the right of the cta box
 */
 @media (min-width: 700px) {
+  #phone-img {
+    max-width: 33rem;
+    bottom: -230px;
+  }
+
   #bg-pattern-1 {
     display: block;
     transform: translate(-128%, -2%);
@@ -377,6 +384,28 @@ footer {
     display: block;
     transform: translate(223%, 55%);
     z-index: 2;
+  }
+
+  .services {
+    margin-top: 6rem;
+  }
+
+  .section__title {
+    justify-content: flex-start;
+    margin-top: 0;
+    margin-bottom: 2rem;
+  }
+
+  .service__item {
+    text-align: left;
+    flex-direction: row;
+    gap: 3.375rem;
+    /* align-items: flex-start; */
+    /* flex-direction: row; */
+  }
+
+  .number {
+    padding: 1.5rem;
   }
 }
 
